Small bug in video memoji, added heigth to fix leyout shift

--- a/src/app/componentes/Header/Header.module.css
+++ b/src/app/componentes/Header/Header.module.css
@@ -19,6 +19,7 @@
   margin-block: clamp(0.6rem, 3vw, 1.2rem);
   border-radius: 50%;
   width: 60px;
+  height: 60px;
   border: 2px solid hsl(var(--clr-dos));
 }
 
